# frisk

./: .gitignore  CLAUDE.md  README.md  SPEC.md  pyproject.toml
.github/workflows/: pages.yml
docs/design/: frisk-design.md
frisk/: __init__.py  cli.py
frisk/connector/: __init__.py  enumerate.py  target.py
frisk/core/: __init__.py  engine.py  ingest.py  models.py  report.py  sanitize.py  score.py
frisk/core/detectors/: __init__.py  base.py  d1_injection.py  d2_hidden.py  d3_sensitive_params.py  d4_scope.py  d5_shadowing.py  d7_hygiene.py
frisk/lockfile/: __init__.py  lock.py
frisk/sandbox/: __init__.py  honeypot.py  prepare.py
scripts/: build_site.py  e2e_playground.mjs
site/: app.js  connect.js  examples.js  index.html  scan.py  style.css
tasks/: STATUS.md  lessons.md  todo.2026-07-03.md  todo.2026-07-04.md  todo.2026-07-05.md  todo.md
tests/: test_cli_acceptance.py  test_connector.py  test_d1_injection.py  test_d2_hidden.py  test_d3_sensitive_params.py  test_d4_scope.py  test_d5_shadowing.py  test_d7_hygiene.py  test_engine.py  test_fixture_server.py  test_honeypot.py  test_honeypot_e2e.py  test_ingest.py  test_integration.py  test_lockfile.py  test_models.py  test_report.py  test_review_regressions.py  test_sandbox.py  test_score.py  test_site_bundle.py
tests/fixtures/: definitions.py  mcp_server.py
