[project]
name = "frisk"
version = "0.1.0"
description = "Vet a third-party MCP server before you trust it: sandboxed connect-and-enumerate plus deterministic security detectors."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Gage Nichols" }]
dependencies = [
    "mcp>=1.2.0",
]

[project.scripts]
frisk = "frisk.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["frisk"]

[tool.pytest.ini_options]
# Run tests against the working tree, not a stale installed wheel (cross-cutting Pattern 9).
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "regression: regression tests",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
